# ssh2fa

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  SECURITY.md  install.py  install_deps.sh  requirements.txt  setup.py  ssh_config_template
.github/: FUNDING.yml
Casks/: auto2fa.rb  ssh2fa.rb
LaunchAgents/: com.auto2fa.daemon.plist
auto2fa/: .env  backend.py  cli.py  credentials.py  daemon.py  installer.py  ipc.py  main.py  tunnels.py
auto2fa-mac/: .gitignore  Auto2FA.entitlements  README.md  build.sh  package-app.sh  project.yml
auto2fa-mac/Auto2FA/: AppState.swift  Auto2FAApp.swift  BackendClient.swift  BiometricLock.swift  ChangeHighlight.swift  ContentView.swift  (+33 more)
auto2fa-rs/: Cargo.toml  build-release.sh
auto2fa-rs/crates/a2fa-cli/: Cargo.toml
auto2fa-rs/crates/a2fa-cli/src/: cli.rs  client.rs  main.rs
auto2fa-rs/crates/a2fa-core/: Cargo.toml
auto2fa-rs/crates/a2fa-core/examples/: adopt_check.rs  ssh_login.rs
auto2fa-rs/crates/a2fa-core/src/: error.rs  lib.rs  sys.rs  totp.rs
auto2fa-rs/crates/a2fa-core/src/config/: mod.rs  passwords_store.rs  paths.rs  tunnels_store.rs
auto2fa-rs/crates/a2fa-core/src/creds/: keychain.rs  migrate.rs  mod.rs
auto2fa-rs/crates/a2fa-core/src/engine/: change_key.rs  mod.rs  recovery.rs  schedule.rs  tick.rs
auto2fa-rs/crates/a2fa-core/src/model/: host.rs  mod.rs  newtype.rs  status.rs  tunnel.rs
auto2fa-rs/crates/a2fa-core/src/proto/: error_code.rs  event.rs  method.rs  mod.rs  wire.rs
auto2fa-rs/crates/a2fa-core/src/ssh/: control.rs  failure.rs  master.rs  mod.rs  pty_auth.rs
auto2fa-rs/crates/a2fa-core/src/tunnels/: cleanup.rs  discovery.rs  forward.rs  mod.rs  post_connect.rs  probe.rs  uptime.rs
auto2fa-rs/crates/a2fa-daemon/: Cargo.toml
auto2fa-rs/crates/a2fa-daemon/src/: dispatch.rs  lib.rs  log_rotation.rs  main.rs  managers.rs  server.rs  singleton.rs  subscribers.rs  tunnel_maintenance.rs  tunnel_runtime.rs  workers.rs
auto2fa-rs/crates/a2fa-daemon/src/handlers/: hosts.rs  mod.rs  system.rs  tunnels.rs
auto2fa-rs/crates/a2fa-daemon/tests/: conformance.rs  dispatch.rs
auto2fa-rs/crates/a2fa-tui/: Cargo.toml
auto2fa-rs/crates/a2fa-tui/src/: app.rs  client.rs  lib.rs  main.rs  notify.rs
auto2fa-rs/crates/a2fa-tui/src/views/: hosts.rs  logs.rs  mod.rs  sheets.rs  tunnels.rs
auto2fa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: RELEASE.md  index.html
packaging/: auto2fa-daemon.spec
scripts/: uninstall.sh
tests/: test_backend_hooks.py  test_credentials.py  test_daemon_ipc.py  test_daemon_singleton.py  test_installer.py  test_pooling_logic.py  test_tunnels.py
unused_archive/: IMPLEMENTATION_SUMMARY.md  INSTALL.md  auto2fa.py  auto2fa_daemon.py  com.auto2fa.daemon.plist  daemon_config.json  install_service.sh  setup.sh  setup_daemon.sh  test_colors.py
(+325 files in other folders)
