[workspace]
resolver = "2"
members = ["crates/a2fa-core", "crates/a2fa-daemon", "crates/a2fa-cli", "crates/a2fa-tui"]

[workspace.package]
edition = "2021"
rust-version = "1.78"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
log = "0.4"
simplelog = "0.12"
regex = "1"
