[package]
name = "a2fa-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
regex.workspace = true
totp-rs = "5"
keyring = { version = "3", features = ["apple-native"] }

[dev-dependencies]
tempfile = "3"
